fix: collect dep jdk modules